Use height 100% instead of 100vh to fix scrolling on iOS Safari
Previously the bottom toolbar of Safari did overlap some of the content

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -7,6 +7,10 @@ body {
   -moz-osx-font-smoothing: grayscale;
 }
 
+html, body, #root {
+  height: 100%
+}
+
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
